--- a/package.json
+++ b/package.json
@@ -16,21 +16,23 @@
     "jest-expo": "^49.0.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-animated-bottom-drawer": "^0.0.23"
+    "react-native-animated-bottom-drawer": "^0.0.23",
+    "react-native-draglist": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.3.0",
     "@types/jest": "^29.5.4",
-    "@types/react": "~18.0.14",
-    "@types/react-native": "^0.72.2",
+    "@types/react": "~18.2.14",
     "typescript": "^5.1.3"
   },
   "private": true,
   "jest": {
     "preset": "react-native",
-    "setupFilesAfterEnv": ["@testing-library/jest-native/extend-expect"],
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ],
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
     ]
