--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
     "jest": "^29.2.1",
@@ -17,7 +18,8 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-animated-bottom-drawer": "^0.0.23",
-    "react-native-draglist": "^3.5.1"
+    "react-native-draglist": "^3.5.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -25,6 +27,7 @@
     "@testing-library/react-native": "^12.3.0",
     "@types/jest": "^29.5.4",
     "@types/react": "~18.2.14",
+    "@types/uuid": "^9.0.3",
     "typescript": "^5.1.3"
   },
   "private": true,
